# verbum

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  PATH_EXPRESSION_GEN.md  TODO.md  rr_vs_hx
.github/workflows/: rust.yml
examples/: abelian_rewriting.rs  arities_json.rs  benchmarking.rs  dot.rs  heuristics_demo.rs  random_generation_demo.rs  random_rewrite_saturation.rs  random_rewriting.rs  string_rewriting.rs  variable_rewriting.rs
expressions/: simple-math.json
jsons/algebra/: arities.json  language.json  trs.json
jsons/arithmetic/: arities.json  language.json  trs.json
jsons/logic/: arities.json  language.json  trs.json
jsons/random-generation/: arities.json
jsons/random-rewrite-saturation/: language.json  trs.json
jsons/simple-math/: costs.json  small.json  trs.json
rewriting-systems/: simple_math.json
src/: compact.rs  data_union_find.rs  debug_test.rs  did.rs  equation.rs  index_selector.rs  lib.rs  macros.rs  main.rs  seen.rs  string_rewriting.rs  union_find.rs
src/benchmark/: csv_output.rs  formatter.rs  mod.rs  pretty_printing.rs  random_generation.rs  reachability.rs  saturation.rs
src/graph/: data_graph.rs  edge_data_graph.rs  mod.rs
src/language/: arities.rs  expression.rs  grammar.pest  mod.rs  parsing.rs  symbol.rs  topology.rs
src/language/expression/: any.rs  expression.rs  (+6 more)
src/rewriting/: direct.rs  egraph.rs  egraph_matching.rs  heuristic.rs  ilp.rs  matching.rs  mod.rs  pattern.rs  random.rs  reachability.rs  rule.rs  strings.rs  unification.rs
src/rewriting_system/: calculus.rs  mod.rs
src/utils/: json.rs  mod.rs
(+28 files in other folders)
