[package]
name = "verbum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
colored = "2.0.0"
csv = "1.4"
itertools = "0.14.0"
nalgebra = "0.34.1"
pest = "2.8.1"
pest_derive = "2.8.1"
rand = "0.8"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"
trait-set = "0.3.0"

[[bin]]
name = "path_expression_gen"
path = "src/bin/path_expression_gen.rs"
